{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 71,
  "lineage": "185ac95c-bc9a-bb32-272d-6b215d03ea1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:825065029817:internet-gateway/igw-095f9dfa162b8f018",
            "id": "igw-095f9dfa162b8f018",
            "owner_id": "825065029817",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-0b5e4751ea2971e0a"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:825065029817:route-table/rtb-0d99528c48d945b85",
            "id": "rtb-0d99528c48d945b85",
            "owner_id": "825065029817",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095f9dfa162b8f018",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5e4751ea2971e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b13afdc863edfbc",
            "route_table_id": "rtb-0d99528c48d945b85",
            "subnet_id": "subnet-06757827aa6baf271"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-route-table",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4070f1c4a057b31",
            "route_table_id": "rtb-0d99528c48d945b85",
            "subnet_id": "subnet-0e2047aecfa9f7fb1"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-route-table",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:825065029817:security-group/sg-07d6e3697dcb6cf66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d6e3697dcb6cf66",
            "ingress": [],
            "name": "terraform-20221224033846025200000001",
            "name_prefix": "terraform-",
            "owner_id": "825065029817",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5e4751ea2971e0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:825065029817:subnet/subnet-06757827aa6baf271",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06757827aa6baf271",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825065029817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-0b5e4751ea2971e0a"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:825065029817:subnet/subnet-0e2047aecfa9f7fb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2047aecfa9f7fb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825065029817",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-0b5e4751ea2971e0a"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:825065029817:vpc/vpc-0b5e4751ea2971e0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08be1f8b2c551a154",
            "default_route_table_id": "rtb-09a7ccdfbf7947475",
            "default_security_group_id": "sg-0500574bfa310496e",
            "dhcp_options_id": "dopt-0cf511c4678bb4511",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5e4751ea2971e0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a7ccdfbf7947475",
            "owner_id": "825065029817",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}